--- a/ZxingScan/build.gradle
+++ b/ZxingScan/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.administrator.clickproject"
-        minSdkVersion 16
+        applicationId "com.example.administrator.zxingscan"
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,6 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:23.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile files('libs/zxing.jar')
 }
