点击其他天气的崩溃雨滴云朵使用objectAnimator实现

--- a/weather_animation/src/main/AndroidManifest.xml
+++ b/weather_animation/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".DuoYunAcitivity"
                   android:label="DuoYunAcitivity">
         </activity>
+        <activity android:name=".RainActivity"
+            android:label="RainActivity">
+        </activity>
     </application>
 
 </manifest>
