--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':handle', ':zxingscan', ':weather_animation'
+include ':app', ':handle', ':zxingscan', ':weather_animation', ':lbs'
