--- a/pink_lbs_test/build.gradle
+++ b/pink_lbs_test/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile files('libs/AMap_ Location_v1.4.0_20150830.jar')
+    compile files('libs/Android_Map_2.5.1.20150827.jar')
 }
