--- a/pink_lbs_test/build.gradle
+++ b/pink_lbs_test/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile files('libs/AMap_ Location_v1.4.0_20150830.jar')
     compile files('libs/Android_Map_2.5.1.20150827.jar')
+    compile files('libs/AMap_Location_v2.0.0_20151117.jar')
+    compile files('libs/AMap_Services_V2.7.0_20151125.jar')
 }
