创建一个定位的管理类，

--- a/pink_lbs_test/src/main/AndroidManifest.xml
+++ b/pink_lbs_test/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".location2_0.NetLocationActivity"/>
         <activity android:name=".location2_0.SearchPOIActivity"/>
         <activity android:name=".location2_0.POIListActivity"/>
+        <activity android:name=".SendEmailActivity"/>
         <!-- 定位需要的服务 -->
         <service android:name="com.amap.api.location.APSService"></service>
     </application>
