--- a/pink_lbs_test/build.gradle
+++ b/pink_lbs_test/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile files('libs/Android_Map_2.5.1.20150827.jar')
     compile files('libs/AMap_Location_v2.0.0_20151117.jar')
     compile files('libs/AMap_Services_V2.7.0_20151125.jar')
+    compile files('libs/activation.jar')
+    compile files('libs/additionnal.jar')
+    compile files('libs/mail.jar')
 }
