--- a/myview/src/main/AndroidManifest.xml
+++ b/myview/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".seekbar.SeekBarActivity">
+        <activity android:name=".seekbar.SeekBarTest">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
