--- a/myview/src/main/AndroidManifest.xml
+++ b/myview/src/main/AndroidManifest.xml
@@ -7,24 +7,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".seekbar.SeekBarTest">
+        <activity android:name=".seekbar.SeekBarActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
+    </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN" />-->
-
             <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
         <activity android:name=".MensesBodyInfoActivity"/>
+        <activity android:name=".seekbar.FuckActivity"/>
     </application>
 
 </manifest>
